fix: mishandling rules with no whitespace between them

--- a/test/gauntlet.css
+++ b/test/gauntlet.css
@@ -1,9 +1,7 @@
 
 div {
   background: red;
-}
-
-.cls {
+}.cls {
   color: green;
 }
 
